syntax = "proto3";

                 package dtGift;
service DtGiftService {
 rpc createDtGift (DtGiftCreateInput) returns (DtGift) {}
rpc dtGifts (findManyParams) returns (stream DtGift) {}
rpc dtGift (DtGiftWhereUniqueInput) returns (DtGift) {}
rpc updateDtGift (DtGiftUpdateInput) returns (DtGift) {}
rpc deleteDtGift (DtGiftWhereUniqueInput) returns (DtGift) {}
rpc findManyDtGift (DtGiftWhereUniqueInput) returns (stream WedInvGift) {}
rpc updateDtGift (WedInvGiftParams) returns (stream WedInvGift) {}
rpc connectDtGift (WedInvGiftParams) returns (WedInvGift) {}
rpc disconnectDtGift (WedInvGiftParams) returns (WedInvGift) {} 
 }
message DtGiftCreateInput {
string createdAt = 1;
repeated string giftType = 2;
string icon = 3;
string id = 4;
string name = 5;
string updatedAt = 6;
repeated WedInvGift wedInvGifts = 7;
};
message DtGift {
string createdAt = 1;
repeated string giftType = 2;
string icon = 3;
string id = 4;
string name = 5;
string updatedAt = 6;
repeated WedInvGift wedInvGifts = 7;
};
message DtGiftWhereUniqueInput {
string createdAt = 1;
repeated string giftType = 2;
string icon = 3;
string id = 4;
string name = 5;
string updatedAt = 6;
repeated WedInvGift wedInvGifts = 7;
};
message DtGiftUpdateInput {
string createdAt = 1;
repeated string giftType = 2;
string icon = 3;
string id = 4;
string name = 5;
string updatedAt = 6;
repeated WedInvGift wedInvGifts = 7;
};
message findManyParams {

};
message WedInvGift {
string accountName = 1;
string accountNo = 2;
string accountPhoto = 3;
string createdAt = 4;
string details = 5;
string id = 6;
string updatedAt = 7;
};
message WedInvGiftWhereUniqueInput {
string accountName = 1;
string accountNo = 2;
string accountPhoto = 3;
string createdAt = 4;
string details = 5;
string id = 6;
string updatedAt = 7;
};
message WedInvGiftParams {
DtGiftWhereUniqueInput dtGiftWhereUniqueInput = 1;
WedInvGiftWhereUniqueInput wedinvgiftWhereUniqueInput = 2;
};