syntax = "proto3";

                 package wedInv;
service WedInvService {
 rpc createWedInv (WedInvCreateInput) returns (WedInv) {}
rpc wedInvs (findManyParams) returns (stream WedInv) {}
rpc wedInv (WedInvWhereUniqueInput) returns (WedInv) {}
rpc updateWedInv (WedInvUpdateInput) returns (WedInv) {}
rpc deleteWedInv (WedInvWhereUniqueInput) returns (WedInv) {}
rpc findManyWedInv (WedInvWhereUniqueInput) returns (stream WedInvComment) {}
rpc updateWedInv (WedInvCommentParams) returns (stream WedInvComment) {}
rpc connectWedInv (WedInvCommentParams) returns (WedInvComment) {}
rpc disconnectWedInv (WedInvCommentParams) returns (WedInvComment) {}
rpc findManyWedInv (WedInvWhereUniqueInput) returns (stream WedInvEvent) {}
rpc updateWedInv (WedInvEventParams) returns (stream WedInvEvent) {}
rpc connectWedInv (WedInvEventParams) returns (WedInvEvent) {}
rpc disconnectWedInv (WedInvEventParams) returns (WedInvEvent) {}
rpc findManyWedInv (WedInvWhereUniqueInput) returns (stream WedInvGallery) {}
rpc updateWedInv (WedInvGalleryParams) returns (stream WedInvGallery) {}
rpc connectWedInv (WedInvGalleryParams) returns (WedInvGallery) {}
rpc disconnectWedInv (WedInvGalleryParams) returns (WedInvGallery) {}
rpc findManyWedInv (WedInvWhereUniqueInput) returns (stream WedInvGift) {}
rpc updateWedInv (WedInvGiftParams) returns (stream WedInvGift) {}
rpc connectWedInv (WedInvGiftParams) returns (WedInvGift) {}
rpc disconnectWedInv (WedInvGiftParams) returns (WedInvGift) {}
rpc findManyWedInv (WedInvWhereUniqueInput) returns (stream WedInvPayment) {}
rpc updateWedInv (WedInvPaymentParams) returns (stream WedInvPayment) {}
rpc connectWedInv (WedInvPaymentParams) returns (WedInvPayment) {}
rpc disconnectWedInv (WedInvPaymentParams) returns (WedInvPayment) {}
rpc findManyWedInv (WedInvWhereUniqueInput) returns (stream WedInvPreset) {}
rpc updateWedInv (WedInvPresetParams) returns (stream WedInvPreset) {}
rpc connectWedInv (WedInvPresetParams) returns (WedInvPreset) {}
rpc disconnectWedInv (WedInvPresetParams) returns (WedInvPreset) {}
rpc findManyWedInv (WedInvWhereUniqueInput) returns (stream WedInvShare) {}
rpc updateWedInv (WedInvShareParams) returns (stream WedInvShare) {}
rpc connectWedInv (WedInvShareParams) returns (WedInvShare) {}
rpc disconnectWedInv (WedInvShareParams) returns (WedInvShare) {}
rpc findManyWedInv (WedInvWhereUniqueInput) returns (stream WedInvStory) {}
rpc updateWedInv (WedInvStoryParams) returns (stream WedInvStory) {}
rpc connectWedInv (WedInvStoryParams) returns (WedInvStory) {}
rpc disconnectWedInv (WedInvStoryParams) returns (WedInvStory) {}
rpc findManyWedInv (WedInvWhereUniqueInput) returns (stream WedInvVideo) {}
rpc updateWedInv (WedInvVideoParams) returns (stream WedInvVideo) {}
rpc connectWedInv (WedInvVideoParams) returns (WedInvVideo) {}
rpc disconnectWedInv (WedInvVideoParams) returns (WedInvVideo) {}
rpc findManyWedInv (WedInvWhereUniqueInput) returns (stream WedInvWedding) {}
rpc updateWedInv (WedInvWeddingParams) returns (stream WedInvWedding) {}
rpc connectWedInv (WedInvWeddingParams) returns (WedInvWedding) {}
rpc disconnectWedInv (WedInvWeddingParams) returns (WedInvWedding) {} 
 }
message WedInvCreateInput {
string createdAt = 1;
string id = 2;
repeated string status = 3;
string updatedAt = 4;
string url = 5;
repeated WedInvComment wedInvComments = 6;
repeated WedInvEvent wedInvEvents = 7;
repeated WedInvGallery wedInvGalleries = 8;
repeated WedInvGift wedInvGifts = 9;
repeated WedInvPayment wedInvPayments = 10;
repeated WedInvPreset wedInvPresets = 11;
repeated WedInvShare wedInvShares = 12;
repeated WedInvStory wedInvStories = 13;
repeated WedInvVideo wedInvVideos = 14;
repeated WedInvWedding wedInvWeddings = 15;
};
message WedInv {
string createdAt = 1;
string id = 2;
repeated string status = 3;
string updatedAt = 4;
string url = 5;
repeated WedInvComment wedInvComments = 6;
repeated WedInvEvent wedInvEvents = 7;
repeated WedInvGallery wedInvGalleries = 8;
repeated WedInvGift wedInvGifts = 9;
repeated WedInvPayment wedInvPayments = 10;
repeated WedInvPreset wedInvPresets = 11;
repeated WedInvShare wedInvShares = 12;
repeated WedInvStory wedInvStories = 13;
repeated WedInvVideo wedInvVideos = 14;
repeated WedInvWedding wedInvWeddings = 15;
};
message WedInvWhereUniqueInput {
string createdAt = 1;
string id = 2;
repeated string status = 3;
string updatedAt = 4;
string url = 5;
repeated WedInvComment wedInvComments = 6;
repeated WedInvEvent wedInvEvents = 7;
repeated WedInvGallery wedInvGalleries = 8;
repeated WedInvGift wedInvGifts = 9;
repeated WedInvPayment wedInvPayments = 10;
repeated WedInvPreset wedInvPresets = 11;
repeated WedInvShare wedInvShares = 12;
repeated WedInvStory wedInvStories = 13;
repeated WedInvVideo wedInvVideos = 14;
repeated WedInvWedding wedInvWeddings = 15;
};
message WedInvUpdateInput {
string createdAt = 1;
string id = 2;
repeated string status = 3;
string updatedAt = 4;
string url = 5;
repeated WedInvComment wedInvComments = 6;
repeated WedInvEvent wedInvEvents = 7;
repeated WedInvGallery wedInvGalleries = 8;
repeated WedInvGift wedInvGifts = 9;
repeated WedInvPayment wedInvPayments = 10;
repeated WedInvPreset wedInvPresets = 11;
repeated WedInvShare wedInvShares = 12;
repeated WedInvStory wedInvStories = 13;
repeated WedInvVideo wedInvVideos = 14;
repeated WedInvWedding wedInvWeddings = 15;
};
message findManyParams {

};
message WedInvComment {
string comment = 1;
string confirmation = 2;
string createdAt = 3;
string id = 4;
string moment = 5;
string name = 6;
string updatedAt = 7;
};
message WedInvCommentWhereUniqueInput {
string comment = 1;
string confirmation = 2;
string createdAt = 3;
string id = 4;
string moment = 5;
string name = 6;
string updatedAt = 7;
};
message WedInvCommentParams {
WedInvWhereUniqueInput wedInvWhereUniqueInput = 1;
WedInvCommentWhereUniqueInput wedinvcommentWhereUniqueInput = 2;
};
message WedInvEvent {
string address = 1;
string createdAt = 2;
string date = 3;
string eventEnd = 4;
string eventStart = 5;
string id = 6;
string maps = 7;
string name = 8;
string place = 9;
string updatedAt = 10;
repeated string zone = 11;
};
message WedInvEventWhereUniqueInput {
string address = 1;
string createdAt = 2;
string date = 3;
string eventEnd = 4;
string eventStart = 5;
string id = 6;
string maps = 7;
string name = 8;
string place = 9;
string updatedAt = 10;
repeated string zone = 11;
};
message WedInvEventParams {
WedInvWhereUniqueInput wedInvWhereUniqueInput = 1;
WedInvEventWhereUniqueInput wedinveventWhereUniqueInput = 2;
};
message WedInvGallery {
string createdAt = 1;
string id = 2;
string name = 3;
string photo = 4;
string updatedAt = 5;
};
message WedInvGalleryWhereUniqueInput {
string createdAt = 1;
string id = 2;
string name = 3;
string photo = 4;
string updatedAt = 5;
};
message WedInvGalleryParams {
WedInvWhereUniqueInput wedInvWhereUniqueInput = 1;
WedInvGalleryWhereUniqueInput wedinvgalleryWhereUniqueInput = 2;
};
message WedInvGift {
string accountName = 1;
string accountNo = 2;
string accountPhoto = 3;
string createdAt = 4;
string details = 5;
string id = 6;
string updatedAt = 7;
};
message WedInvGiftWhereUniqueInput {
string accountName = 1;
string accountNo = 2;
string accountPhoto = 3;
string createdAt = 4;
string details = 5;
string id = 6;
string updatedAt = 7;
};
message WedInvGiftParams {
WedInvWhereUniqueInput wedInvWhereUniqueInput = 1;
WedInvGiftWhereUniqueInput wedinvgiftWhereUniqueInput = 2;
};
message WedInvPayment {
string accountName = 1;
string accountNo = 2;
int32 amount = 3;
string createdAt = 4;
string evidence = 5;
string id = 6;
string noRef = 7;
string updatedAt = 8;
};
message WedInvPaymentWhereUniqueInput {
string accountName = 1;
string accountNo = 2;
int32 amount = 3;
string createdAt = 4;
string evidence = 5;
string id = 6;
string noRef = 7;
string updatedAt = 8;
};
message WedInvPaymentParams {
WedInvWhereUniqueInput wedInvWhereUniqueInput = 1;
WedInvPaymentWhereUniqueInput wedinvpaymentWhereUniqueInput = 2;
};
message WedInvPreset {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message WedInvPresetWhereUniqueInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message WedInvPresetParams {
WedInvWhereUniqueInput wedInvWhereUniqueInput = 1;
WedInvPresetWhereUniqueInput wedinvpresetWhereUniqueInput = 2;
};
message WedInvShare {
string createdAt = 1;
int32 frequency = 2;
string id = 3;
string identity = 4;
string link = 5;
string name = 6;
bool open = 7;
string updatedAt = 8;
};
message WedInvShareWhereUniqueInput {
string createdAt = 1;
int32 frequency = 2;
string id = 3;
string identity = 4;
string link = 5;
string name = 6;
bool open = 7;
string updatedAt = 8;
};
message WedInvShareParams {
WedInvWhereUniqueInput wedInvWhereUniqueInput = 1;
WedInvShareWhereUniqueInput wedinvshareWhereUniqueInput = 2;
};
message WedInvStory {
string createdAt = 1;
string date = 2;
string description = 3;
string id = 4;
string name = 5;
string photo = 6;
string updatedAt = 7;
};
message WedInvStoryWhereUniqueInput {
string createdAt = 1;
string date = 2;
string description = 3;
string id = 4;
string name = 5;
string photo = 6;
string updatedAt = 7;
};
message WedInvStoryParams {
WedInvWhereUniqueInput wedInvWhereUniqueInput = 1;
WedInvStoryWhereUniqueInput wedinvstoryWhereUniqueInput = 2;
};
message WedInvVideo {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
string video = 4;
};
message WedInvVideoWhereUniqueInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
string video = 4;
};
message WedInvVideoParams {
WedInvWhereUniqueInput wedInvWhereUniqueInput = 1;
WedInvVideoWhereUniqueInput wedinvvideoWhereUniqueInput = 2;
};
message WedInvWedding {
string createdAt = 1;
string father = 2;
repeated string gender = 3;
string id = 4;
string mother = 5;
string name = 6;
string photo = 7;
string updatedAt = 8;
};
message WedInvWeddingWhereUniqueInput {
string createdAt = 1;
string father = 2;
repeated string gender = 3;
string id = 4;
string mother = 5;
string name = 6;
string photo = 7;
string updatedAt = 8;
};
message WedInvWeddingParams {
WedInvWhereUniqueInput wedInvWhereUniqueInput = 1;
WedInvWeddingWhereUniqueInput wedinvweddingWhereUniqueInput = 2;
};